# textual-transitions

./: .gitignore  pyproject.toml
src/transitions/: __main__.py  app.py  demo.py  stopwatch.css  transitions.css
src/transitions/widgets/: screen.py
